# StatusServer

./: .gitignore  CMakeLists.txt  README.md  StatusServer.sln  StatusServer.vcxproj  vcpkg.json
StatusServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  StatusServer.cpp  StatusServer.vcxproj  StatusServer.vcxproj.filters  StatusServiceImpl.cpp  StatusServiceImpl.h  config.ini  const.h  message.pb.cc  message.proto
include/: ConfigMgr.h  Defer.h  MySqlDao.h  RedisMgr.h  StatusServiceImpl.h
src/: ConfigMgr.cpp  MySqlDao.cpp  RedisMgr.cpp  StatusServer.cpp
